--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </button>
         </div>
         <div class="toggler">
-            <ul class="links nav-links">
-                <li>Home</li>
-                <li>Resources</li>
-                <li>Products</li>
-                <li>About Us</li>
-                <li>Contact</li>
+            <ul class="links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </div>
